kafka-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-wcp
    control-plane: capw-controller-manager
  name: ysree
