kafka-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all
spec:
 ingress:
  - {}
 podSelector: {}
